Quick update to requester to work with latest FMA
Signed-off-by: aavarghese <avarghese@us.ibm.com>

--- a/examples/values-requester.yaml
+++ b/examples/values-requester.yaml
@@ -30,6 +30,12 @@ routing:
 requester:
   enable: true
   image: "ghcr.io/llm-d-incubation/llm-d-fast-model-actuation/requester:latest"
+  accelerators: "GPU-0"
+  inferenceServerConfig: "inference-server-config-example"
+  inferenceServerConfigAnnotations:
+    description: "Example InferenceServerConfig"
+  launcherConfig: "launcher-config-example"
+  launcherConfigAnnotations: {}
   port:
     probes: 8080
     spi: 8081
