--- a/charts/llm-d-modelservice/templates/decode-requester-replicaset.yaml
+++ b/charts/llm-d-modelservice/templates/decode-requester-replicaset.yaml
@@ -90,25 +90,8 @@ spec:
           imagePullPolicy: Always
           command:
           - /app/requester
-          - --node=$(NODE_NAME)
-          - --pod-uid=$(POD_UID)
-          - --namespace=$(NAMESPACE)
-          env:
-          - name: NODE_NAME
-            valueFrom:
-              fieldRef:
-                apiVersion: v1
-                fieldPath: spec.nodeName
-          - name: POD_UID
-            valueFrom:
-              fieldRef:
-                apiVersion: v1
-                fieldPath: metadata.uid
-          - name: NAMESPACE
-            valueFrom:
-              fieldRef:
-                apiVersion: v1
-                fieldPath: metadata.namespace
+          - --logtostderr=false
+          - --log_file=/tmp/requester.log
           ports:
           - name: probes
             containerPort: {{ .Values.requester.port.probes }}
