Fix chart tracing values

--- a/charts/llm-d-modelservice/templates/decode-requester-replicaset.yaml
+++ b/charts/llm-d-modelservice/templates/decode-requester-replicaset.yaml
@@ -52,9 +52,7 @@ spec:
     port: {{ .Values.requester.modelServerConfig.port | default 8005 }}
     {{- if or (.Values.decode.initContainers) (eq .Values.routing.proxy.enabled true) }}
     initContainers:
-      {{- with .Values.routing }}
-      {{- (include "llm-d-modelservice.routingProxy" .) | nindent 6 }}
-      {{- end }}
+      {{- (include "llm-d-modelservice.routingProxy" (dict "proxy" .Values.routing.proxy "servicePort" .Values.routing.servicePort "Values" .Values)) | nindent 6 }}
       {{- if .Values.decode.initContainers }}
       {{- toYaml .Values.decode.initContainers | nindent 6 }}
       {{- end }}
